fix title align

--- a/app/styles/article.scss
+++ b/app/styles/article.scss
@@ -8,6 +8,10 @@
 
   .article__title {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     padding: 100px 0;
     background-size: cover!important;
